--- a/.github/workflows/main_kejibanking.yml
+++ b/.github/workflows/main_kejibanking.yml
@@ -22,10 +22,10 @@ jobs:
           dotnet-version: '8.x'
 
       - name: Build with dotnet
-        run: dotnet build ./Banking.API --configuration Release
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./Banking.API -c Release -o "${{env.DOTNET_ROOT}}/myapp"
+        run: dotnet publish -c Release -o "${{env.DOTNET_ROOT}}/myapp"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -51,9 +51,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2AA2E141DD2B4373B300CB9509AE128F }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_70F921622C484BF88DD14C50A836A477 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_BC3A5AE8798348DEB764D261FBD04885 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_E199360591604B93812F1488D500440E }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F189BF52E2CC4BEDB5A32815CA59C689 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_6E6E8FACB85548CCB3EC752DFF2DD0F9 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
